Modified mask wave effect on hero section to attempt to fix small visible line between waves on Google Chrome

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -228,8 +228,12 @@ h3 {
     /* border-bottom-right-radius: 2em; */
 
     --mask:
-    radial-gradient(67.08px at 50% calc(100% - 90.00px),#000 99%,#0000 101%) calc(50% - 60px) 0/120px 100%,
-    radial-gradient(67.08px at 50% calc(100% + 60.00px),#0000 99%,#000 101%) 50% calc(100% - 30px)/120px 100% repeat-x;
+    radial-gradient(67.08px at 50% calc(100% - 90.00px), #000 99%, transparent 101%) calc(50% - 60px) 0/120px 100%,
+    radial-gradient(67.08px at 50% calc(100% + 60.00px), transparent 99%, #000 101%) 50% calc(100% - 30px)/120px 100% repeat-x;
+
+    
+    /* radial-gradient(67.08px at 50% calc(100% - 90.00px),#000 99%,#0000 101%) calc(50% - 60px) 0/120px 100%, */
+    /* radial-gradient(67.08px at 50% calc(100% + 60.00px),#0000 99%,#000 101%) 50% calc(100% - 30px)/120px 100% repeat-x; */
     -webkit-mask: var(--mask);
     mask: var(--mask);
 
